# kweb-player

./: .gitignore  CMakeLists.txt  Makefile  README.md  google-play-music.js  googlemusicplayer.cpp  googlemusicplayer.h  jsscripts.qrc  kweb-player.desktop  kweb-player.notifyrc  kweb-player.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mprisplayerobject.cpp  mprisplayerobject.h  playerstatus.cpp  playerstatus.h  playertrack.cpp  playertrack.h  trayicon.cpp  trayicon.h  web-player.pro
amarok/: DBusAbstractAdaptor.cpp
icon/: icon.xcf
